add English version.

--- a/CN/How_it_works.ipynb
+++ b/CN/How_it_works.ipynb
@@ -4,29 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 Image part\n",
+    "# 1 图像部分\n",
     "- pysekiro\n",
     "    - img_tools\n",
     "        - \\__init__.py\n",
-    "        - adjustment.py\n",
-    "        - get_status.py\n",
-    "        - get_vertices.py\n",
-    "        - grab_screen.py"
+    "        - adjustment.py (游戏窗口校准)\n",
+    "        - get_status.py (状态获取)\n",
+    "        - get_vertices.py (顶点位置获取)\n",
+    "        - grab_screen.py (屏幕图像抓取)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 grab screen"
+    "## 1.1 屏幕图像抓取"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[grab_screen.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/img_tools/grab_screen.py)  \n",
-    "source code: [Sentdex/pygta5/blob/master/grabscreen.py](https://github.com/Sentdex/pygta5/blob/master/grabscreen.py)"
+    "[grab_screen.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/CN/pysekiro/img_tools/grab_screen.py)  \n",
+    "源代码： [Sentdex/pygta5/blob/master/grabscreen.py](https://github.com/Sentdex/pygta5/blob/master/grabscreen.py)"
    ]
   },
   {
@@ -43,21 +43,21 @@
     "cv2.imshow('screen', screen)\n",
     "cv2.waitKey(0)\n",
     "\n",
-    "print('shape', screen.shape)"
+    "print('形状', screen.shape)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 get vertices"
+    "## 1.2 顶点位置获取"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[get_vertices.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/img_tools/get_vertices.py)"
+    "[get_vertices.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/CN/pysekiro/img_tools/get_vertices.py)"
    ]
   },
   {
@@ -71,8 +71,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As shown in the above demonstration(demo.gif), in the pop-up window, use the left mouse button to click the **lower left**, **upper left**, **upper right**, and **lower right** in sequence, a total of 4 times, and then press the \"ESC\" key on the keyboard, it will automatically return to x, x_w, y, y_h.\n",
-    "(Note: The order of the clicks is stipulated, and the number of clicks is also stipulated)"
+    "如上面的演示所示（demo.gif），在弹出来的窗口中用鼠标左键按顺序依次点击**左下**，**左上**，**右上**，**右下**，一共 4 次，然后按键盘上的“ESC”键，就会自动返回 x, x_w, y, y_h。  \n",
+    "（注意：这个点击的顺序是规定好的，点击的次数也是规定好的）"
    ]
   },
   {
@@ -95,14 +95,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.3 get status"
+    "## 1.3 状态获取"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[get_status.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/img_tools/get_status.py)"
+    "[get_status.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/CN/pysekiro/img_tools/get_status.py)"
    ]
   },
   {
@@ -116,28 +116,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The states to be acquired are: Self_HP, Self_Posture, Target_HP, Target_Posture.\n",
-    "- How to obtain\n",
-    "    1. Get **x, x_w, y, y_h** from [get_vertices.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/img_tools/get_vertices.py).\n",
-    "    2. Image processing\n",
-    "    3. Quantify into numbers"
+    "要获取的状态有：自身生命，自身架势，目标生命，目标架势。  \n",
+    "- 获取方法\n",
+    "    1. 从 [get_vertices.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/CN/pysekiro/img_tools/get_vertices.py) 获取 **x, x_w, y, y_h** 。\n",
+    "    2. 图像处理\n",
+    "    3. 量化成数字"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.1 get HP"
+    "### 1.3.1 生命值的获取"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Extract the ROI\n",
-    "2. The color channel is separated, and the G (Green) channel is taken\n",
-    "3. Image threshold processing\n",
-    "4. Convert to a number"
+    "1. 提取感兴趣区域\n",
+    "2. 颜色通道分离，取G(Green)通道\n",
+    "3. 图像阈值处理\n",
+    "4. 转化为数值"
    ]
   },
   {
@@ -145,13 +145,14 @@
    "metadata": {},
    "source": [
     "~~~python\n",
+    "# 获取自身生命\n",
     "def get_Self_HP(img):\n",
     "    img_roi = roi(img, x=48, x_w=305, y=409, y_h=409+1)\n",
     "\n",
-    "    b, g ,r =cv2.split(img_roi)    # Color channel separation\n",
+    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "\n",
-    "    retval, img_th = cv2.threshold(g, 50, 255, cv2.THRESH_TOZERO)              # Image threshold processing, if the pixel value is lower than 50, set it to 0\n",
-    "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # Image threshold processing, if the pixel value is higher than 70, set it to 0\n",
+    "    retval, img_th = cv2.threshold(g, 50, 255, cv2.THRESH_TOZERO)              # 图像阈值处理，像素点的值低于50的设置为0\n",
+    "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于70的设置为0\n",
     "\n",
     "    target_img = img_th[0]\n",
     "    if 0 in target_img:\n",
@@ -161,13 +162,14 @@
     "\n",
     "    return Self_HP\n",
     "\n",
+    "# 获取目标生命\n",
     "def get_Target_HP(img):\n",
     "    img_roi = roi(img, x=48, x_w=216, y=41, y_h=41+1)\n",
     "\n",
-    "    b, g ,r =cv2.split(img_roi)    # Color channel separation\n",
+    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "\n",
-    "    retval, img_th = cv2.threshold(g, 25, 255, cv2.THRESH_TOZERO)             # Image threshold processing, if the pixel value is lower than 25, set to 0\n",
-    "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # Image threshold processing, if the pixel value is higher than 70, set it to 0\n",
+    "    retval, img_th = cv2.threshold(g, 25, 255, cv2.THRESH_TOZERO)             # 图像阈值处理，像素点的值低于25的设置为0\n",
+    "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于70的设置为0\n",
     "\n",
     "    target_img = img_th[0]\n",
     "    if 0 in target_img:\n",
@@ -185,19 +187,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.2 get Posture"
+    "### 1.3.2 架势的获取"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Only read the right half of the Posture\n",
-    "1. Extract the ROI\n",
-    "2. The color channel is separated, and the R (Red) channel is taken\n",
-    "3. Wait for the middle line (white line) of the posture to appear\n",
-    "    - Use cv2.Canny() to detect edges\n",
-    "4. Convert to a number"
+    "- 只读取架势的右半部分\n",
+    "1. 提取感兴趣区域\n",
+    "2. 颜色通道分离，取R(Red)通道\n",
+    "3. 等待架势中线（白线）出现\n",
+    "    - 用 cv2.Canny() 检测边缘\n",
+    "4. 转化为数值"
    ]
   },
   {
@@ -205,9 +207,10 @@
    "metadata": {},
    "source": [
     "~~~python\n",
+    "# 获取自身架势\n",
     "def get_Self_Posture(img):\n",
     "    img_roi = roi(img, x=401, x_w=490, y=389, y_h=389+1)\n",
-    "    b, g ,r =cv2.split(img_roi)    # Color channel separation\n",
+    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "\n",
     "    white_line = r[0][0]\n",
     "    if 155 < white_line < 170 or white_line > 250:\n",
@@ -221,9 +224,10 @@
     "\n",
     "    return Self_Posture\n",
     "\n",
+    "# 获取目标架势\n",
     "def get_Target_Posture(img):\n",
     "    img_roi = roi(img, x=401, x_w=553, y=29, y_h=29+1)\n",
-    "    b, g ,r =cv2.split(img_roi)    # Color channel separation\n",
+    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
     "\n",
     "    white_line = r[0][0]\n",
     "    if white_line > 190:\n",
@@ -243,35 +247,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2 Key part (Button part)\n",
+    "# 2 按键部分\n",
     "- pysekiro\n",
     "    - key_tools\n",
     "        - \\__init__.py\n",
-    "        - actions.py\n",
-    "        - direct_keys.py\n",
-    "        - get_keys.py"
+    "        - actions.py (动作控制)\n",
+    "        - direct_keys.py (控制键盘的按键)\n",
+    "        - get_keys.py (捕获键盘的按键)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 get keys"
+    "## 2.1 捕获键盘的按键"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[get_keys.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/key_tools/get_keys.py)  \n",
-    "source code: [Sentdex/pygta5/blob/master/getkeys.py](https://github.com/Sentdex/pygta5/blob/master/getkeys.py)"
+    "[get_keys.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/CN/pysekiro/key_tools/get_keys.py)  \n",
+    "源代码： [Sentdex/pygta5/blob/master/getkeys.py](https://github.com/Sentdex/pygta5/blob/master/getkeys.py)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[keys.py](https://github.com/Sentdex/pygta5/blob/master/keys.py) lines 146 to 254\n",
+    "[keys.py](https://github.com/Sentdex/pygta5/blob/master/keys.py) 第146行至254行\n",
     "~~~python\n",
     "# virtual keys\n",
     "vk = {\n",
@@ -295,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Detect the key currently being pressed\n",
+    "检测当前正在按的键\n",
     "~~~python\n",
     "def key_check():\n",
     "    keys = []\n",
@@ -310,45 +314,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 direct keys"
+    "## 2.2 控制键盘的按键"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[direct_keys.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/key_tools/direct_keys.py)  \n",
-    "source code: [Sentdex/pygta5/blob/master/directkeys.py](https://github.com/Sentdex/pygta5/blob/master/directkeys.py)"
+    "[direct_keys.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/CN/pysekiro/key_tools/direct_keys.py)  \n",
+    "源代码： [Sentdex/pygta5/blob/master/directkeys.py](https://github.com/Sentdex/pygta5/blob/master/directkeys.py)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PressKey  \n",
-    "ReleaseKey"
+    "PressKey 压键  \n",
+    "ReleaseKey 松键  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.3 actions"
+    "## 2.3 动作控制"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[actions.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/key_tools/actions.py)  \n",
-    "source code: [Sentdex/pygta5/blob/master/3.%20test_model.py](https://github.com/Sentdex/pygta5/blob/master/3.%20test_model.py)"
+    "[actions.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/CN/pysekiro/key_tools/actions.py)   \n",
+    "源代码： [Sentdex/pygta5/blob/master/3.%20test_model.py](https://github.com/Sentdex/pygta5/blob/master/3.%20test_model.py)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[keys.py](https://github.com/Sentdex/pygta5/blob/master/keys.py) lines 35 to 143\n",
+    "[keys.py](https://github.com/Sentdex/pygta5/blob/master/keys.py) 第35行至143行\n",
     "~~~python\n",
     "# direct keys\n",
     "dk = {\n",
@@ -372,12 +376,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "e.g.\n",
+    "e.g. \n",
     "~~~python\n",
     "def Move_Forward():\n",
-    "    PressKey(dk['W'])\n",
-    "    time.sleep(0.01)    # Key duration (control long press and short press)\n",
-    "    ReleaseKey(dk['W'])\n",
+    "    PressKey(dk['W'])      # 压键\n",
+    "    time.sleep(0.01)    # 按键持续时间（控制长按和短按）\n",
+    "    ReleaseKey(dk['W'])    # 松键\n",
     "~~~"
    ]
   },
@@ -385,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When this function is called, the game will receive the key signal sent by the program, and then drive the operating object to make the corresponding action."
+    "调用这个函数时，游戏就会接收到程序发送过来的按键信号，然后驱动操作对象做出相应的动作。"
    ]
   }
  ],
