--- a/CN/Quick_start.ipynb
+++ b/CN/Quick_start.ipynb
@@ -4,64 +4,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 Game settings"
+    "# 1 游戏设置"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Open the game 《Sekiro™ Shadows Die Twice》\n",
-    "    - Options\n",
-    "        - Sound and Display\n",
-    "            - **Adjust Brightness**\n",
-    "                - set 5\n",
-    "        - Key Config\n",
-    "            - Movement\n",
-    "                - Move Forward\n",
-    "                    - set W\n",
-    "                - Move Back\n",
-    "                    - set S\n",
-    "                - Move Left\n",
-    "                    - set A\n",
-    "                - Move Right\n",
-    "                    - set D\n",
-    "                - Step Dodge, (hold) Sprint\n",
-    "                    - set .Shift\n",
-    "                - Jump\n",
-    "                    - set Space\n",
-    "            - Camera Controls\n",
-    "                - **Camera Reset/Lock On**\n",
-    "                    - set Y\n",
-    "            - Attack Action\n",
-    "                - **Attack**\n",
-    "                    - set J\n",
-    "                - **Deflect, (Hold) Gurad**\n",
-    "                    - set K\n",
-    "        - Graphics Options\n",
-    "            - **Screen Mode**\n",
-    "                - set Windowed\n",
-    "            - **Screen Resolution**\n",
-    "                - set 800 x 450\n",
-    "            - Automatic Rendering Adjustment\n",
+    "- 打开游戏 《只狼：影逝二度》\n",
+    "    - 设定\n",
+    "        - 显示和声音\n",
+    "            - **亮度调整**\n",
+    "                - 设置 5\n",
+    "        - 按键设置\n",
+    "            - 移动\n",
+    "                - 移动 前\n",
+    "                    - 设置 W (默认)\n",
+    "                - 移动 后\n",
+    "                    - 设置 S (默认)\n",
+    "                - 移动 左\n",
+    "                    - 设置 A (默认)\n",
+    "                - 移动 右\n",
+    "                    - 设置 D (默认)\n",
+    "                - 垫步、（长按）冲刺\n",
+    "                    - 设置 .Shift (默认)\n",
+    "                - 跳跃\n",
+    "                    - 设置 Space (默认)\n",
+    "            - 视角操作\n",
+    "                - **重置视角/固定目标**\n",
+    "                    - 设置 Y (需要设置)\n",
+    "            - 攻击动作\n",
+    "                - **攻击**\n",
+    "                    - 设置 J (需要设置)\n",
+    "                - **防御**\n",
+    "                    - 设置 K (需要设置)\n",
+    "        - 图像设定\n",
+    "            - **屏幕模式**\n",
+    "                - 窗口\n",
+    "            - **屏幕分辨率**\n",
+    "                - 800 x 450\n",
+    "            - 自动绘图调整\n",
     "                - OFF\n",
-    "            - Quality Settings\n",
-    "                - Low"
+    "            - 质量设定\n",
+    "                - 低"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calibrate the game window position"
+    "### 校准游戏窗口位置"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Place the game window on the upper left.  \n",
+    "- 将游戏窗口放在左上方  \n",
     "![adjustment_01.png](https://github.com/ricagj/pysekiro/blob/main/imgs/adjustment_01.png?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "运行以下代码，然后根据弹出来的窗口调整游戏窗口的位置"
    ]
   },
   {
@@ -79,9 +86,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- When prompted \"Ready!\"\n",
-    "    - Press \"T\" to start\n",
-    "    - Press \"P\" to end"
+    "- 当提示 \"Ready!\" 后\n",
+    "    - 按 T 开始\n",
+    "    - 按 P 结束"
    ]
   },
   {
@@ -102,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2 Start"
+    "# 2 开始"
    ]
   },
   {
@@ -132,10 +139,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **save_memory_path** Specify the path to save the memory/experience. The default is None, do not save.\n",
-    "- **load_memory_path** Specify the path to load the memory/experience. The default is None, do not load.\n",
-    "- **save_weights_path** Specify the path to save the model weight. The default is None, do not save. **Note: The default is also the test mode, if you set this parameter, the training mode will be turned on.**\n",
-    "- **load_weights_path** Specify the path to load the model weight. The default is None, do not load."
+    "- **save_memory_path** 指定记忆/经验保存的路径。默认为None，不保存。\n",
+    "- **load_memory_path** 指定记忆/经验加载的路径。默认为None，不加载。\n",
+    "- **save_weights_path** 指定模型权重保存的路径。默认为None，不保存。**注：默认也是测试模式，若设置该参数，就会开启训练模式**\n",
+    "- **load_weights_path** 指定模型权重加载的路径。默认为None，不加载。"
    ]
   },
   {
@@ -153,11 +160,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = 'Genichiro_Ashina'\n",
-    "# target = 'Inner_Genichiro'\n",
-    "# target = 'True Monk'\n",
-    "# target = 'Isshin,_the_Sword_Saint'\n",
-    "# target = 'Inner_Isshin'"
+    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
+    "# target = 'True Monk' # 宫内破戒僧\n",
+    "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
+    "# target = 'Inner_Isshin' # 心中的一心"
    ]
   },
   {
@@ -167,10 +174,10 @@
    "outputs": [],
    "source": [
     "train = Play_Sekiro_Online(\n",
-    "    save_memory_path = target + '_memory.json',    # Comment this line will not save the memory/experience\n",
-    "    load_memory_path = target + '_memory.json',    # Comment this line will not load the memory/experience\n",
-    "    save_weights_path = target + '_w.h5',    # Comment this line will not save the model weights\n",
-    "    load_weights_path = target + '_w.h5'     # Comment this line will not load the model weights\n",
+    "    save_memory_path = target + '_memory.json',    # 注释这行就不保存记忆\n",
+    "    load_memory_path = target + '_memory.json',    # 注释这行就不加载记忆\n",
+    "    save_weights_path = target + '_w.h5',    # 注释这行就不保存模型权重\n",
+    "    load_weights_path = target + '_w.h5'     # 注释这行就不加载模型权重\n",
     ")"
    ]
   },
@@ -187,9 +194,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- When prompted \"Ready!\"\n",
-    "    - Press \"T\" to start\n",
-    "    - Press \"P\" to end"
+    "- 当提示 \"Ready!\" 后\n",
+    "    - 按 \"T\" 开始\n",
+    "    - 按 \"P\" 结束"
    ]
   },
   {
@@ -220,11 +227,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **lr** learning rate\n",
-    "- **batch_size** Number of samples drawn\n",
-    "- **load_memory_path** Specify the path to load the memory/experience.\n",
-    "- **save_weights_path** Specify the path to save the model weight. The default is None, do not save.\n",
-    "- **load_weights_path** Specify the path to load the model weight. The default is None, do not load."
+    "- **lr** 学习率\n",
+    "- **batch_size** 样本抽取数量\n",
+    "- **load_memory_path** 指定记忆/经验加载的路径。\n",
+    "- **save_weights_path** 指定模型权数保存的路径。默认为None，不保存。\n",
+    "- **load_weights_path** 指定模型权重加载的路径。默认为None，不加载。"
    ]
   },
   {
@@ -242,11 +249,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = 'Genichiro_Ashina'\n",
-    "# target = 'Inner_Genichiro'\n",
-    "# target = 'True Monk'\n",
-    "# target = 'Isshin,_the_Sword_Saint'\n",
-    "# target = 'Inner_Isshin'"
+    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
+    "# target = 'True Monk' # 宫内破戒僧\n",
+    "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
+    "# target = 'Inner_Isshin' # 心中的一心"
    ]
   },
   {
@@ -258,9 +265,9 @@
     "train = Play_Sekiro_Offline(\n",
     "    lr = 0.0001,\n",
     "    batch_size = 128,\n",
-    "    load_memory_path = target + '_memory.json',      # Comment this line will not load the memory/experience\n",
-    "    save_weights_path = target + '_w_offline.h5',    # Comment this line will not save the model weights\n",
-    "    load_weights_path = target + '_w.h5'             # Comment this line will not load the model weights\n",
+    "    load_memory_path = target + '_memory.json',      # 注释这行就不加载记忆\n",
+    "    save_weights_path = target + '_w_offline.h5',    # 注释这行就不保存模型权重\n",
+    "    load_weights_path = target + '_w.h5'             # 注释这行就不加载模型权重\n",
     ")"
    ]
   },
@@ -277,16 +284,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- When prompted \"Ready!\"\n",
-    "    - Press \"T\" to start\n",
-    "    - Press \"P\" to end"
+    "- 当提示 \"Ready!\" 后\n",
+    "    - 按 \"T\" 开始\n",
+    "    - 按 \"P\" 结束"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.3 Test model"
+    "## 2.3 测试模型"
    ]
   },
   {
@@ -304,11 +311,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = 'Genichiro_Ashina'\n",
-    "# target = 'Inner_Genichiro'\n",
-    "# target = 'True Monk'\n",
-    "# target = 'Isshin,_the_Sword_Saint'\n",
-    "# target = 'Inner_Isshin'"
+    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
+    "# target = 'True Monk' # 宫内破戒僧\n",
+    "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
+    "# target = 'Inner_Isshin' # 心中的一心"
    ]
   },
   {
@@ -321,7 +328,7 @@
     "model = target + '_w_offline.h5'\n",
     "\n",
     "train = Play_Sekiro_Online(\n",
-    "    load_weights_path = model     # Comment this line will not load the model weights\n",
+    "    load_weights_path = model     # 注释这行就不加载模型权重\n",
     ")"
    ]
   },
@@ -338,9 +345,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- When prompted \"Ready!\"\n",
-    "    - Press \"T\" to start\n",
-    "    - Press \"P\" to end"
+    "- 当提示 \"Ready!\" 后\n",
+    "    - 按 \"T\" 开始\n",
+    "    - 按 \"P\" 结束"
    ]
   }
  ],
